Mobile and spacing fixes.

--- a/client/css/cocktail.css
+++ b/client/css/cocktail.css
@@ -17,6 +17,3 @@
 	padding: 5px 15px;
 }
 
-.drink {
-	height: 290px;
-}
